2015-07-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (help): Add STM32_PRIMER2 and CQ_STARM.

	* chopstx: Update to 0.06.

	* tool/stlinkv2.py: Support 512kB version of STM32F103.
	The size of executable file should be even.

2015-07-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (CSRC): Add ecc-mont.c.

	* src/ecc-mont.c (mod25638_mul_121665): Fix.
	(ecdh_compute_public_25519, ecdh_decrypt_curve25519): New.

	* src/openpgp.c (cmd_pso): Support ALGO_CURVE25519.

	* src/openpgp-do.c (algorithm_attr_cv25519): New.
	(rw_algorithm_attr, get_algo_attr_data_object)
	(gpg_get_algo_attr_key_size, gpg_do_write_prvkey)
	(proc_key_import, gpg_do_public_key): Support ALGO_CURVE25519.

	* src/gnuk.h (ALGO_CURVE25519): New.

2015-07-06  Niibe Yutaka  <gniibe@fsij.org>

	Enhancement for FSM-55.
	* tool/stlinkv2.py (stlinkv2.control_nrst): New.
	(stlinkv2.get_rdp_key,has_spi_flash,has_protection): New.
	(stlinkv2.get_core_id): Rename.
	(stlinkv2.blank_check): Use self.flash_size.
	(stlinkv2.start): Call control_nrst.  Call get_core_id.
	Distinguishing chip, and set rdp_key, flash_size and require_nrst.
	(stlinkv2.flash_write): Use self.flash_block_size.
	(main): Call control_nrst.
	(prog_flash_write_body, prog_option_bytes_write_body)
	(prog_blank_check_body): Support Cortex-M0.
	(main): Call API V2 halt twice.
	* tool/asm-thumb/*.S: Updated for Cortex-M0.

2015-06-30  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c: Update from chopstx/example-cdc/sys.c.

	* src/main.c (device_initialize_once): Apply change of NeuG.

2015-06-03  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.5.

	* test/ecc_nistp256_keys.py: New.

	* tool/upgrade_by_passwd.py: Remove -p option and add -f option.

	* tool/gnuk_token.py (gnuk_token.download): Add verbose flag.
	(regnual.download): Ditto.

	* tool/gnuk_upgrade.py: Use gnuk_token module.

2015-06-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso): Support OpenPGPcard spec v3.0.
